# where-is-it

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  package-lock.json  package.json
src/: lib.rs
src/java/: mod.rs
src/python/: finder.rs  helpers.rs  mod.rs  python.rs
src/python/providers/: asdf.rs  conda.rs  mod.rs  path.rs  pyenv.rs  rye.rs  winreg.rs
