[package]
name = "where-is-it"
version = "0.0.1"
description = "A library for finding useful application"
license = "MIT"
repository = "https://github.com/TheApplePieGod/where-is-it"
edition = "2021"

[features]
default = ["java", "python"]
java = ["dep:java-properties"]
python = ["dep:pep440_rs"]
node-compile = ["dep:napi", "dep:napi-derive"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.71"
lazy_static = "1.4.0"
shellexpand = "3.1.0"
fancy-regex = "0.11.0"
md5 = "0.7.0"
wait-timeout = "0.2.0"
faccess = "0.2.4"
dirs = "5.0.1"
# Java deps
java-properties = { version = "2.0.0", optional = true }
# Python deps
pep440_rs = { version = "0.3.11", optional = true }
# Node compile deps
napi = { version = "2.6.13", optional = true }
napi-derive = { version = "2.6.13", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.7.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52.0"

[build-dependencies]
napi-build = "2.1.4"
